# rust-the-book

./: Cargo.toml  README.md
ch01-hello-world/: Cargo.toml
ch01-hello-world/src/: main.rs
ch02-guessing-game/: Cargo.toml
ch02-guessing-game/src/: main.rs
ch03-common-concepts/: Cargo.toml
ch03-common-concepts/src/: main.rs
ch04-ownership/: Cargo.toml
ch04-ownership/src/: main.rs
ch05-structs/: Cargo.toml
ch05-structs/src/: main.rs
ch06-enums/: Cargo.toml
ch06-enums/src/: main.rs
ch07-packages-crates-modules/: Cargo.toml
ch07-packages-crates-modules/src/: main.rs
ch08-collections/: Cargo.toml
ch08-collections/src/: main.rs
ch09-error-handling/: Cargo.toml
ch09-error-handling/src/: main.rs
ch10-generics-traits-lifetimes/: Cargo.toml
ch10-generics-traits-lifetimes/src/: main.rs
ch11-testing/: Cargo.toml
ch11-testing/src/: main.rs
ch12-io-project/: Cargo.toml
ch12-io-project/src/: main.rs
ch13-iterators-closures/: Cargo.toml
ch13-iterators-closures/src/: lib.rs  main.rs
ch15-smart-pointers/: Cargo.toml
ch15-smart-pointers/src/: main.rs
ch16-concurrency/: Cargo.toml
ch16-concurrency/src/: main.rs
ch17-oop/: Cargo.toml
ch17-oop/src/: main.rs
ch18-patterns/: Cargo.toml
ch18-patterns/src/: main.rs
ch19-advanced-features/: Cargo.toml
ch19-advanced-features/src/: main.rs
ch20-final-project/: Cargo.toml
ch20-final-project/src/: main.rs
