[workspace]
members = [
    "ch01-hello-world",
    "ch02-guessing-game",
    "ch03-common-concepts",
    "ch04-ownership",
    "ch05-structs",
    "ch06-enums",
    "ch07-packages-crates-modules",
    "ch08-collections",
    "ch09-error-handling",
    "ch10-generics-traits-lifetimes",
    "ch11-testing",
    "ch12-io-project",
    "ch13-iterators-closures",
    "ch15-smart-pointers",
    "ch16-concurrency",
    "ch17-oop",
    "ch18-patterns",
    "ch19-advanced-features",
    "ch20-final-project",
]
resolver = "2"
